Our Locations spacing issues, Mobile UI issues, affiliate title and height of the card issues

--- a/app/assets/styles/modules/_affiliatePage.scss
+++ b/app/assets/styles/modules/_affiliatePage.scss
@@ -149,6 +149,12 @@
         font-size: 14px;
         font-weight: bold;
         font-family: 'Lato', sans-serif;
+        text-overflow: ellipsis;
+        max-height: 52px;
+        overflow: hidden;
+        -webkit-line-clamp: 2;
+        -webkit-box-orient: vertical;
+        display: -webkit-box;
       }
       
       .post-content h6 {
@@ -165,8 +171,13 @@
         font-family: 'Lato', sans-serif;
       }
 
-      h4.post-title {
-        height: 50px;      
+      h4.post-title {   
+        text-overflow: ellipsis;
+        max-height: 52px;
+        overflow: hidden;
+        -webkit-line-clamp: 2;
+        -webkit-box-orient: vertical;
+        display: -webkit-box;
       } 
 
       .btn-try {
@@ -425,8 +436,10 @@
           margin: 0;
           padding: 0;
       }
-      figure img {
-          max-width: 100%
+      figure img { 
+          max-width: 100%;
+          max-height: 160px;
+          object-fit: cover;
       }
       iframe {
           border: none;
